--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="img_count">%1d/10</string>
     <string name="search_field">장소 입력</string>
     <string name="search">검색</string>
+
+    <string name="error_login">로그인 창을 표시할 수 없습니다.</string>
+    <string name="error_cancel">취소하였습니다.</string>
+    <string name="error_network">네트워크가 연결되어 있지 않습니다.</string>
+    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>
+    <string name="error_token">토큰이 없습니다.</string>
+    <string name="error_login_failed">로그인에 실패하였습니다.</string>
 </resources>
